# camforge

./: .gitignore  CMakeLists.txt  LICENSE  README.md
scripts/: build.ps1  build.sh  setup_deps.ps1  setup_deps.sh
shaders/: filter.frag
src/: main.cpp
src/app/: main.cpp
